--- a/.github/workflows/buildAndroid.yml
+++ b/.github/workflows/buildAndroid.yml
@@ -47,6 +47,7 @@ jobs:
           haxelib install hscript
           haxelib install flixel-addons
           haxelib install hxCodec
+          haxelib install polymod
           haxelib git linc_luajit https://github.com/jigsaw-4277821/linc_luajit.git
           haxelib git extension-androidtools https://github.com/jigsaw-4277821/extension-androidtools.git
           haxelib list
